--- a/spec/system/renderState/addBgm.spec.yaml
+++ b/spec/system/renderState/addBgm.spec.yaml
@@ -14,6 +14,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       bgm:
         audioId: "backgroundMusic"
@@ -30,14 +31,15 @@ out:
       type: "container"
       x: 0
       y: 0
-      children:
-        - id: "bgm"
-          type: "audio"
-          url: "bgm.mp3"
-          loop: true
-          volume: 0.7
-          delay: 0
+      children: []
   animations: []
+  audio:
+    - id: "bgm"
+      type: "sound"
+      url: "bgm.mp3"
+      loop: true
+      volume: 0.7
+      delay: 0
 ---
 case: add bgm with default values
 in:
@@ -48,6 +50,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       bgm:
         audioId: "simpleMusic"
@@ -61,14 +64,15 @@ out:
       type: "container"
       x: 0
       y: 0
-      children:
-        - id: "bgm"
-          type: "audio"
-          url: "simple.mp3"
-          loop: true
-          volume: 0.5
-          delay: null
+      children: []
   animations: []
+  audio:
+    - id: "bgm"
+      type: "sound"
+      url: "simple.mp3"
+      loop: true
+      volume: 0.5
+      delay: null
 ---
 case: add bgm with custom settings
 in:
@@ -79,6 +83,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       bgm:
         audioId: "customMusic"
@@ -95,14 +100,15 @@ out:
       type: "container"
       x: 0
       y: 0
-      children:
-        - id: "bgm"
-          type: "audio"
-          url: "custom.mp3"
-          loop: false
-          volume: 0.3
-          delay: 1000
+      children: []
   animations: []
+  audio:
+    - id: "bgm"
+      type: "sound"
+      url: "custom.mp3"
+      loop: false
+      volume: 0.3
+      delay: 1000
 ---
 case: no presentationState.bgm - return unchanged state
 in:
@@ -113,6 +119,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState: {}
     resources:
       audio:
@@ -128,6 +135,7 @@ out:
       y: 0
       children: []
   animations: []
+  audio: []
 ---
 case: story container does not exist - return unchanged state
 in:
@@ -136,6 +144,7 @@ in:
         type: "container"
         children: []
     animations: []
+    audio: []
   - presentationState:
       bgm:
         audioId: "backgroundMusic"
@@ -151,6 +160,7 @@ out:
       type: "container"
       children: []
   animations: []
+  audio: []
 ---
 case: audio not found - return unchanged state
 in:
@@ -161,6 +171,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       bgm:
         audioId: "nonExistent"
@@ -178,6 +189,7 @@ out:
       y: 0
       children: []
   animations: []
+  audio: []
 ---
 case: null resources - return unchanged state
 in:
@@ -188,6 +200,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       bgm:
         audioId: "backgroundMusic"
@@ -200,3 +213,4 @@ out:
       y: 0
       children: []
   animations: []
+  audio: []
