--- a/spec/system/renderState/addSfx.spec.yaml
+++ b/spec/system/renderState/addSfx.spec.yaml
@@ -14,6 +14,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       sfx:
         items:
@@ -32,14 +33,15 @@ out:
       type: "container"
       x: 0
       y: 0
-      children:
-        - id: "sfx1"
-          type: "audio"
-          url: "effect.mp3"
-          loop: false
-          volume: 0.7
-          delay: 0
+      children: []
   animations: []
+  audio:
+    - id: "sfx1"
+      type: "sound"
+      url: "effect.mp3"
+      loop: false
+      volume: 0.7
+      delay: 0
 ---
 case: add sfx with default values
 in:
@@ -50,6 +52,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       sfx:
         items:
@@ -65,14 +68,15 @@ out:
       type: "container"
       x: 0
       y: 0
-      children:
-        - id: "sfx1"
-          type: "audio"
-          url: "simple.mp3"
-          loop: true
-          volume: 0.5
-          delay: null
+      children: []
   animations: []
+  audio:
+    - id: "sfx1"
+      type: "sound"
+      url: "simple.mp3"
+      loop: true
+      volume: 0.5
+      delay: null
 ---
 case: add sfx with custom settings
 in:
@@ -83,6 +87,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       sfx:
         items:
@@ -101,14 +106,15 @@ out:
       type: "container"
       x: 0
       y: 0
-      children:
-        - id: "sfx1"
-          type: "audio"
-          url: "custom.mp3"
-          loop: true
-          volume: 0.3
-          delay: 500
+      children: []
   animations: []
+  audio:
+    - id: "sfx1"
+      type: "sound"
+      url: "custom.mp3"
+      loop: true
+      volume: 0.3
+      delay: 500
 ---
 case: multiple sfx items
 in:
@@ -119,6 +125,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       sfx:
         items:
@@ -139,20 +146,21 @@ out:
       type: "container"
       x: 0
       y: 0
-      children:
-        - id: "sfx1"
-          type: "audio"
-          url: "first.mp3"
-          loop: true
-          volume: 0.6
-          delay: null
-        - id: "sfx2"
-          type: "audio"
-          url: "second.mp3"
-          loop: true
-          volume: 0.5
-          delay: null
+      children: []
   animations: []
+  audio:
+    - id: "sfx1"
+      type: "sound"
+      url: "first.mp3"
+      loop: true
+      volume: 0.6
+      delay: null
+    - id: "sfx2"
+      type: "sound"
+      url: "second.mp3"
+      loop: true
+      volume: 0.5
+      delay: null
 ---
 case: no presentationState.sfx - return unchanged state
 in:
@@ -163,6 +171,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState: {}
     resources:
       audio:
@@ -178,6 +187,7 @@ out:
       y: 0
       children: []
   animations: []
+  audio: []
 ---
 case: story container does not exist - return unchanged state
 in:
@@ -186,6 +196,7 @@ in:
         type: "container"
         children: []
     animations: []
+    audio: []
   - presentationState:
       sfx:
         items:
@@ -203,6 +214,13 @@ out:
       type: "container"
       children: []
   animations: []
+  audio:
+    - id: "sfx1"
+      type: "sound"
+      url: "effect.mp3"
+      loop: true
+      volume: 0.7
+      delay: null
 ---
 case: audio not found - skip item
 in:
@@ -213,6 +231,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       sfx:
         items:
@@ -232,6 +251,7 @@ out:
       y: 0
       children: []
   animations: []
+  audio: []
 ---
 case: no sfx items - return unchanged state
 in:
@@ -242,6 +262,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       sfx:
         items: []
@@ -259,6 +280,7 @@ out:
       y: 0
       children: []
   animations: []
+  audio: []
 ---
 case: null resources - return unchanged state
 in:
@@ -269,6 +291,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       sfx:
         items:
@@ -283,3 +306,4 @@ out:
       y: 0
       children: []
   animations: []
+  audio: []
