--- a/spec/system/renderState/addVoice.spec.yaml
+++ b/spec/system/renderState/addVoice.spec.yaml
@@ -14,6 +14,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       voice:
         fileId: "voice.mp3"
@@ -26,13 +27,14 @@ out:
       type: "container"
       x: 0
       y: 0
-      children:
-        - id: "voice-voice.mp3"
-          type: "audio"
-          url: "voice.mp3"
-          volume: 0.8
-          loop: false
+      children: []
   animations: []
+  audio:
+    - id: "voice-voice.mp3"
+      type: "sound"
+      url: "voice.mp3"
+      volume: 0.8
+      loop: false
 ---
 case: add voice with default values
 in:
@@ -43,6 +45,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       voice:
         fileId: "simpleVoice.mp3"
@@ -53,13 +56,14 @@ out:
       type: "container"
       x: 0
       y: 0
-      children:
-        - id: "voice-simpleVoice.mp3"
-          type: "audio"
-          url: "simpleVoice.mp3"
-          volume: 0.5
-          loop: false
+      children: []
   animations: []
+  audio:
+    - id: "voice-simpleVoice.mp3"
+      type: "sound"
+      url: "simpleVoice.mp3"
+      volume: 0.5
+      loop: false
 ---
 case: add voice with loop enabled
 in:
@@ -70,6 +74,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       voice:
         fileId: "loopingVoice.mp3"
@@ -82,13 +87,14 @@ out:
       type: "container"
       x: 0
       y: 0
-      children:
-        - id: "voice-loopingVoice.mp3"
-          type: "audio"
-          url: "loopingVoice.mp3"
-          volume: 0.6
-          loop: true
+      children: []
   animations: []
+  audio:
+    - id: "voice-loopingVoice.mp3"
+      type: "sound"
+      url: "loopingVoice.mp3"
+      volume: 0.6
+      loop: true
 ---
 case: no presentationState.voice - return unchanged state
 in:
@@ -99,6 +105,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState: {}
     resources: {}
 out:
@@ -109,6 +116,7 @@ out:
       y: 0
       children: []
   animations: []
+  audio: []
 ---
 case: story container does not exist - return unchanged state
 in:
@@ -117,6 +125,7 @@ in:
         type: "container"
         children: []
     animations: []
+    audio: []
   - presentationState:
       voice:
         fileId: "voice.mp3"
@@ -129,6 +138,12 @@ out:
       type: "container"
       children: []
   animations: []
+  audio:
+    - id: "voice-voice.mp3"
+      type: "sound"
+      url: "voice.mp3"
+      volume: 0.7
+      loop: false
 ---
 case: null presentationState - return unchanged state
 in:
@@ -139,6 +154,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState: null
     resources: {}
 out:
@@ -149,6 +165,7 @@ out:
       y: 0
       children: []
   animations: []
+  audio: []
 ---
 case: voice with custom volume and loop
 in:
@@ -159,6 +176,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       voice:
         fileId: "customVoice.mp3"
@@ -171,13 +189,14 @@ out:
       type: "container"
       x: 0
       y: 0
-      children:
-        - id: "voice-customVoice.mp3"
-          type: "audio"
-          url: "customVoice.mp3"
-          volume: 0.3
-          loop: true
+      children: []
   animations: []
+  audio:
+    - id: "voice-customVoice.mp3"
+      type: "sound"
+      url: "customVoice.mp3"
+      volume: 0.3
+      loop: true
 ---
 case: null resources - still works (voice doesn't use resources)
 in:
@@ -188,6 +207,7 @@ in:
         y: 0
         children: []
     animations: []
+    audio: []
   - presentationState:
       voice:
         fileId: "voice.mp3"
@@ -200,10 +220,11 @@ out:
       type: "container"
       x: 0
       y: 0
-      children:
-        - id: "voice-voice.mp3"
-          type: "audio"
-          url: "voice.mp3"
-          volume: 0.7
-          loop: false
+      children: []
   animations: []
+  audio:
+    - id: "voice-voice.mp3"
+      type: "sound"
+      url: "voice.mp3"
+      volume: 0.7
+      loop: false
