--- a/spec/system/selectors/selectRenderState.spec.yaml
+++ b/spec/system/selectors/selectRenderState.spec.yaml
@@ -40,6 +40,7 @@ out:
       y: 0
       children: []
   animations: []
+  audio: []
 ---
 case: multiple lines and actions not last line
 in:
@@ -80,6 +81,7 @@ out:
       y: 0
       children: []
   animations: []
+  audio: []
 ---
 case: multiple lines and actions last line
 in:
@@ -120,3 +122,4 @@ out:
       y: 0
       children: []
   animations: []
+  audio: []
