--- a/vt/specs/character/animation-1.yaml
+++ b/vt/specs/character/animation-1.yaml
@@ -2,6 +2,13 @@
 title: "Character Animation 1"
 description: Test animation in, update, out for character containers
 ---
+localization:
+  defaultPackageId: eklekfjwalefj
+  packages:
+    eklekfjwalefj:
+      label: English
+      lang: en
+      keys: {}
 screen:
   width: 1920
   height: 1080
