--- a/vt/specs/background/animation-2.yaml
+++ b/vt/specs/background/animation-2.yaml
@@ -2,6 +2,13 @@
 title: "Animation 2"
 description: test both in and out animation at same time
 ---
+localization:
+  defaultPackageId: eklekfjwalefj
+  packages:
+    eklekfjwalefj:
+      label: English
+      lang: en
+      keys: {}
 screen:
   width: 1920
   height: 1080
