--- a/vt/specs/complete/one.yaml
+++ b/vt/specs/complete/one.yaml
@@ -1,282 +1,17 @@
 ---
 title: "Sample"
 ---
+localization:
+  defaultPackageId: eklekfjwalefj
+  packages:
+    eklekfjwalefj:
+      label: English
+      lang: en
+      keys: {}
 screen:
   width: 1920
   height: 1080
   backgroundColor: "#000000"
-
-i18n:
-  defaultPackId: eklekfjwalefj
-  packs:
-    eklekfjwalefj:
-      label: English
-      lang: en
-      keys:
-        layout:
-          historyDialogueLayout:
-            fkjl233: "History"
-            fkjaefewfl233: "Back"
-          creditsLayout:
-            x23f329fa: "Credits"
-            f33h429fa: "Credits Content 2"
-            iasdkj32: "Credits Content 3"
-            credit4: "Credits Content 4"
-            credit5: "Credits Content 5"
-            credit6: "Credits Content 6"
-            credit7: "Credits Content 7"
-            credit8: "Credits Content 8"
-            credit9: "Credits Content 9"
-            credit10: "Credits Content 10"
-            credit11: "Credits Content 11"
-            credit12: "Credits Content 12"
-            credit13: "Credits Content 13"
-            credit14: "Credits Content 14"
-            credit15: "Credits Content 15"
-            credit16: "Credits Content 16"
-            credit17: "Credits Content 17"
-            credit18: "Credits Content 18"
-            credit19: "Credits Content 19"
-            credit20: "Credits Content 20"
-          dafkjkl3:
-            "9fdadf-options": "Options"
-            "textspeed-id": "Text speed: ${variables.textSpeed}"
-            "load-title": "Load"
-            "save-title": "Save"
-            "gallery-title": "Gallery"
-            "replay-title": "Replay"
-            "music-room-title": "Music Room"
-            "music-room-stop": "Stop Music"
-            fjkl2jk: "Track 1 - Sample Music"
-            fjkl2fe23jk: "Track 2 - Sample Music"
-            "start": "Start"
-            "save": "Save"
-            "load": "Load"
-            "options": "Options"
-            "gallery": "Gallery"
-            "replay": "Replay"
-            "music-room": "Music Room"
-            "main": "Main"
-            "back": "Back"
-            "page-prev": "<"
-            "page-next": ">"
-            "languages": "Languages"
-            "english": "English"
-            "italian": "Italian"
-          f3jik32isdf:
-            "32sadfj": "Are you sure to exit the application?"
-            "38sdfa2": "Yes"
-            "e83a": "No"
-          j3i8dk32:
-            "start": "Start"
-            "load": "Load"
-            "options": "Options"
-            "exit": "Exit"
-            "extra": "Extra"
-          fi3l:
-            "dialogue-action-button": "Auto"
-            "dialogue-action-skip": "Skip"
-            "dialogue-action-history": "History"
-            "dialogue-action-options": "Options"
-            "dialogue-action-hide": "Hide"
-            "dialogue-action-back": "Back"
-        scene:
-          ajfl3a:
-            k3nfgdsai34:
-              line1:
-                fkjl23ras: "Extra 1"
-              line2:
-                afjk293s: "Extra 2"
-              line3:
-                kl4j3sf9: "Extra 3"
-              line4:
-                m2k4jfs8: "Extra 4"
-              line5:
-                p9sj2k3f: "Extra 5"
-            3k3s9sd:
-              line1:
-                qw8r4j2k: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-              line2:
-                xm3k9s2d: "Two and a half sentences."
-              line3:
-                zn5k8w3r: "Three sentences. Three sentences. Three sentences."
-              line4:
-                cv7j2k9s: "Four sentences. Four sentences. Four sentences. Four sentences."
-              line5:
-                bnm4k3s8: "Five sentences. Five sentences. Five sentences. Five sentences."
-              line6:
-                lkj9s3d2: "Six sentences. Six sentences. Six sentences. Six sentences."
-              line7:
-                poi8k3s7: "Seven sentences. Seven sentences. Seven sentences. Seven sentences."
-              line8:
-                mnb6k2s9: "Eight sentences. Eight sentences. Eight sentences. Eight sentences."
-              line9:
-                vxc4k7s3: "Nine sentences. Nine sentences. Nine sentences. Nine sentences."
-              line10:
-                qaz3k8s2: "Ten sentences. Ten sentences. Ten sentences. Ten sentences."
-              line11:
-                wsx4k9s1: "Eleven sentences. Eleven sentences. Eleven sentences. Eleven sentences."
-              line12:
-                edc5k2s7: "Twelve sentences. Twelve sentences. Twelve sentences. Twelve sentences."
-              line13:
-                rfv6k3s8: "Thirteen sentences. Thirteen sentences. Thirteen sentences. Thirteen sentences."
-              line14:
-                tgb7k4s9: "Fourteen sentences. Fourteen sentences. Fourteen sentences. Fourteen sentences."
-            934kjfa3:
-              line1:
-                yhn8k5s1: "Section Three"
-              line2:
-                ujm9k6s2: "Wooooooooo"
-              line3:
-                ik0k7s3: "Fooooooooo"
-              line4:
-                ol1k8s4: "Gooooooooo"
-              line5:
-                p2k9s5: "GlGooooooooo"
-              line6:
-                a3k0s6: "XGooooooooo"
-        character:
-          ajf34a:
-            name: "Character One"
-    italianopack:
-      label: Italiano
-      lang: it
-      keys:
-        layout:
-          historyDialogueLayout:
-            fkjl233: "Cronologia"
-            fkjaefewfl233: "Indietro"
-          creditsLayout:
-            x23f329fa: "Crediti"
-            f33h429fa: "Contenuto Crediti 2"
-            iasdkj32: "Contenuto Crediti 3"
-            credit4: "Contenuto Crediti 4"
-            credit5: "Contenuto Crediti 5"
-            credit6: "Contenuto Crediti 6"
-            credit7: "Contenuto Crediti 7"
-            credit8: "Contenuto Crediti 8"
-            credit9: "Contenuto Crediti 9"
-            credit10: "Contenuto Crediti 10"
-            credit11: "Contenuto Crediti 11"
-            credit12: "Contenuto Crediti 12"
-            credit13: "Contenuto Crediti 13"
-            credit14: "Contenuto Crediti 14"
-            credit15: "Contenuto Crediti 15"
-            credit16: "Contenuto Crediti 16"
-            credit17: "Contenuto Crediti 17"
-            credit18: "Contenuto Crediti 18"
-            credit19: "Contenuto Crediti 19"
-            credit20: "Contenuto Crediti 20"
-          dafkjkl3:
-            "9fdadf-options": "Opzioni"
-            "textspeed-id": "Velocità testo: ${variables.textSpeed}"
-            "load-title": "Carica"
-            "save-title": "Salva"
-            "gallery-title": "Galleria"
-            "replay-title": "Replay"
-            "music-room-title": "Sala Musica"
-            "music-room-stop": "Ferma Musica"
-            fjkl2jk: "Traccia 1 - Musica di Esempio"
-            fjkl2fe23jk: "Traccia 2 - Musica di Esempio"
-            "start": "Inizia"
-            "save": "Salva"
-            "load": "Carica"
-            "options": "Opzioni"
-            "gallery": "Galleria"
-            "replay": "Replay"
-            "music-room": "Sala Musica"
-            "main": "Principale"
-            "back": "Indietro"
-            "page-prev": "<"
-            "page-next": ">"
-            "languages": "Lingue"
-            "english": "Inglese"
-            "italian": "Italiano"
-          f3jik32isdf:
-            "32sadfj": "Sei sicuro di voler uscire dall'applicazione?"
-            "38sdfa2": "Sì"
-            "e83a": "No"
-          j3i8dk32:
-            "start": "Inizia"
-            "load": "Carica"
-            "options": "Opzioni"
-            "exit": "Esci"
-            "extra": "Extra"
-          fi3l:
-            "dialogue-action-button": "Auto"
-            "dialogue-action-skip": "Salta"
-            "dialogue-action-history": "Cronologia"
-            "dialogue-action-options": "Opzioni"
-            "dialogue-action-hide": "Nascondi"
-            "dialogue-action-back": "Indietro"
-        scene:
-          ajfl3a:
-            k3nfgdsai34:
-              line1:
-                fkjl23ras: "Extra 1"
-              line2:
-                afjk293s: "Extra 2"
-              line3:
-                kl4j3sf9: "Extra 3"
-              line4:
-                m2k4jfs8: "Extra 4"
-              line5:
-                p9sj2k3f: "Extra 5"
-            3k3s9sd:
-              line1:
-                qw8r4j2k: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-              line2:
-                xm3k9s2d: "Due frasi e mezza."
-              line3:
-                zn5k8w3r: "Tre frasi. Tre frasi. Tre frasi."
-              line4:
-                cv7j2k9s: "Quattro frasi. Quattro frasi. Quattro frasi. Quattro frasi."
-              line5:
-                bnm4k3s8: "Cinque frasi. Cinque frasi. Cinque frasi. Cinque frasi."
-              line6:
-                lkj9s3d2: "Sei frasi. Sei frasi. Sei frasi. Sei frasi."
-              line7:
-                poi8k3s7: "Sette frasi. Sette frasi. Sette frasi. Sette frasi."
-              line8:
-                mnb6k2s9: "Otto frasi. Otto frasi. Otto frasi. Otto frasi."
-              line9:
-                vxc4k7s3: "Nove frasi. Nove frasi. Nove frasi. Nove frasi."
-              line10:
-                qaz3k8s2: "Dieci frasi. Dieci frasi. Dieci frasi. Dieci frasi."
-              line11:
-                wsx4k9s1: "Undici frasi. Undici frasi. Undici frasi. Undici frasi."
-              line12:
-                edc5k2s7: "Dodici frasi. Dodici frasi. Dodici frasi. Dodici frasi."
-              line13:
-                rfv6k3s8: "Tredici frasi. Tredici frasi. Tredici frasi. Tredici frasi."
-              line14:
-                tgb7k4s9: "Quattordici frasi. Quattordici frasi. Quattordici frasi. Quattordici frasi."
-            934kjfa3:
-              line1:
-                yhn8k5s1: "Sezione Tre"
-              line2:
-                ujm9k6s2: "Wooooooooo"
-              line3:
-                ik0k7s3: "Fooooooooo"
-              line4:
-                ol1k8s4: "Gooooooooo"
-              line5:
-                p2k9s5: "GlGooooooooo"
-              line6:
-                a3k0s6: "XGooooooooo"
-        character:
-          ajf34a:
-            name: "Personaggio Uno"
-      # files:
-      #   kfej2: ...
-      # patch:
-      #   images:
-      #     alkejf3la:
-      #       fileId: 94lkj289
-      #     f3wklajf32:
-      #       fileId: dmni32
-      #     32rka331:
-      #       fileId: 23jkfa893
 
 resources:
   variables:
